refine test